--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar navbar-dark">
+    <nav class="navbar navbar-dark fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand">SkillMovie</a>
           <form class="d-flex" role="search" id="form">
